<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:key="@string/settings_order_by_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_order_by_label"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values" />

    <EditTextPreference
        android:defaultValue="@string/settings_subject_default"
        android:inputType="text"
        android:key="@string/settings_subject_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_subject_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_section_default"
        android:inputType="text"
        android:key="@string/settings_section_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_section_label" />

</PreferenceScreen>